// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auditImagesAndMultimedia document has image tag 1`] = `
Object {
  "errors": Array [
    "Tag image is deprecated",
  ],
  "logs": Array [
    "Document has 1 img with srcset attribute",
    "Document has some flexible images",
  ],
  "name": "images and multimedia in dom",
  "tables": Array [
    Object {
      "content": Object {
        "canvas": 3,
        "image": 1,
        "img": 3,
        "map": 3,
        "picture": 3,
        "source": 3,
        "video": 3,
      },
    },
  ],
}
`;

exports[`auditImagesAndMultimedia document has not any images 1`] = `
Object {
  "errors": Array [],
  "logs": Array [
    "Document has 0 img with srcset attribute",
  ],
  "name": "images and multimedia in dom",
  "tables": Array [
    Object {
      "content": Object {
        "canvas": 0,
        "image": 0,
        "img": 0,
        "map": 0,
        "picture": 0,
        "source": 0,
        "video": 0,
      },
    },
  ],
}
`;

exports[`auditImagesAndMultimedia document has not flexible images 1`] = `
Object {
  "errors": Array [
    "Document does not have any flexible images",
  ],
  "logs": Array [
    "Document has 0 img with srcset attribute",
  ],
  "name": "images and multimedia in dom",
  "tables": Array [
    Object {
      "content": Object {
        "canvas": 0,
        "image": 0,
        "img": 10,
        "map": 0,
        "picture": 0,
        "source": 0,
        "video": 0,
      },
    },
  ],
}
`;

exports[`auditImagesAndMultimedia document is ok 1`] = `
Object {
  "errors": Array [],
  "logs": Array [
    "Document has 1 img with srcset attribute",
    "Document has some flexible images",
  ],
  "name": "images and multimedia in dom",
  "tables": Array [
    Object {
      "content": Object {
        "canvas": 3,
        "image": 0,
        "img": 3,
        "map": 3,
        "picture": 3,
        "source": 3,
        "video": 3,
      },
    },
  ],
}
`;
